--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ target/
 #Ipython Notebook
 .ipynb_checkpoints
 .idea/
+src/donight/db.sqlite3
+src/donight/log.txt
+src/donight/scrapers_log.txt
+src/donight/externals_log.txt
+src/donight/scripts/events.xlsx
