--- a/.gitignore
+++ b/.gitignore
@@ -96,4 +96,7 @@ src/donight/externals_log.txt
 src/donight/scripts/events.xlsx
 
 src/donight/config/personal-data/
-docs/
+src/donight/web/client/node_modules/
+src/donight/web/client/static/bower_components/
+src/donight/web/client/static/build
+src/donight/web/client/static/compile
