--- a/src/donight/web/client/bower.json
+++ b/src/donight/web/client/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-router": "~0.2.18",
     "angular-ui-select": "~0.16.1",
     "angular-smart-table": "~2.1.8",
-    "angular-moment": "~1.0.0"
+    "angular-moment": "~1.0.0",
+    "angular-read-more": "~1.0.5"
   },
   "private": true,
   "license": "MIT"
